Fix wrapping in History table

--- a/src/gwt/src/org/rstudio/studio/client/workbench/views/history/view/HistoryPane.css
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/views/history/view/HistoryPane.css
@@ -65,6 +65,7 @@
 }
 td.timestamp {
    padding-right: 3px;
+   font-size: 0.8em !important;
 }
 tr.timestamp td {
    padding-top: 6px;
